Bug 46590 - fails compile when DRI1 headers not present
Summary: fails compile when DRI1 headers not present
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-24 13:30 UTC by nobled
Modified: 2012-02-24 13:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description nobled 2012-02-24 13:30:15 UTC
I didn't have x11proto-xf86dri-dev installed, and configure completed successfully, putting out this:

checking for XORG... yes
checking for DRM... yes
checking for DRI... no
checking for DRI2... yes
checking for PCIACCESS... yes
checking for dri.h... no
checking for sarea.h... yes
checking for dristruct.h... no

But then it failed at compile-time:

In file included from ../../../../xf86-video-intel/src/legacy/i810/i810.h:58:0,
                 from ../../../../xf86-video-intel/src/legacy/i810/i810_accel.c:41:
/usr/include/xorg/dri.h:41:21: fatal error: xf86dri.h: No such file or directory
compilation terminated.

It looks like this line in <xorg/xorg-server.h> (at least, version 1.10.4 / git e3a24feb) is conflicting with the #undef XF86DRI from config.h:

/* Build DRI extension */
#define XF86DRI 1
Comment 1 Chris Wilson 2012-02-24 13:46:10 UTC
commit 96db90e819a1990c2d139725e522055e92def959
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Feb 24 21:36:30 2012 +0000

    legacy: Delete unused XF86DRI_DEVEL #define
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=46590
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

commit 85e48d2e5eb029d8c17714cb5e7db39ea06a2455
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Feb 24 21:40:44 2012 +0000

    legacy: Rename XF86DRI to HAVE_DRI1 to avoid conflicts with xorg-server.h
    
    We use the XF86DRI as a user configurable option to control whether to
    build DRI support for i810, but it is also used internally within xorg
    and there exists a public define in xorg-server.h which overrides our
    configure option. So rename our define to HAVE_DRI1 to avoid the
    conflict.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=46590
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

That should do the trick.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.